--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,161 @@
+/*Style*/
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
+:root {
+  --primary: #2F9FED;
+  --bg-main: #F3F3F3;
+  --danger: #FF5C5C;
+}
+
+body {
+  font-family: 'Raleway', Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 1.6;  
+}
+
+/*Helpers*/
+
+.hidden {
+  display: none;
+}
+
+.pos-relative {
+  position: relative;
+}
+
+.text-right {
+  text-align: right;
+}
+
+/*Branding*/
+
+.bg-main {
+  background-color: var(--bg-main);
+}
+
+.color-primary {
+  color: var(--primary);
+}
+
+.btn-primary:hover,
+.btn-primary {
+  background-color: var(--primary);
+  border: 0;
+  padding: 2px 10px;
+}
+
+a.page-link,
+a {
+  color: var(--primary);
+  text-decoration: none;
+}
+
+a:hover{
+  color: var(--primary);
+  text-decoration: underline;
+}
+
+.form-select {
+  max-width: 60px;
+  display: inline-block;
+}
+
+.dropdowns .form-select {
+  max-width: 75px;
+}
+
+.table .first {
+  width: 0;
+  padding: 0;
+}
+
+table tr {
+  position: relative;
+  z-index: 1;
+}
+
+table td {  
+  vertical-align: middle;
+  height: 75px;
+}
+
+table .btn-separator {
+  display: inline-block;
+  height: 15px;
+  width: 1px;
+  background: #ccc;
+  margin-top: 0.75rem;
+}
+
+.btn.btn-action {
+  padding: 0 10px;
+}
+
+.btn .fa-eye {
+  color: var(--primary);
+}
+
+.btn .fa-xmark {
+  color: var(--danger);
+}
+
+.table .table-helper {
+  width: 100%;
+  height: 85%;
+  position: absolute;
+  background-color: #fff;
+  z-index: -1;
+  border-radius: 10px;
+  top: 10px;
+  box-shadow: 0px 5px 7px -3px rgba(0,0,0,0.37);
+  -webkit-box-shadow: 0px 5px 7px -3px rgba(0,0,0,0.37);
+  -moz-box-shadow: 0px 5px 7px -3px rgba(0,0,0,0.37);
+}
+
+.form-switch .form-check-input {
+  font-size: 25px;
+  margin-left: 0;
+}
+
+.form-check-input:checked {
+  background-color: var(--primary);
+  border-color: var(--primary);
+}
+
+.form-switch .form-check-input {
+  border-color: var(--primary);
+}
+
+.form-check,
+.form-switch {
+  padding-left: 0;
+}
+
+.table-pager {  
+  display: inline-block;
+}
+
+.table-entries {
+  float: left;
+}
+
+.btn.btn-add {
+  padding: 5px 25px;
+}
+
+@media (min-width: 768px) {
+  #sidebar {
+    width: 240px;
+    background-color: #EEF8FF;
+  }
+  
+  .form-search input {
+    display: inline-block;
+    max-width: 88%;
+  }
+  
+  .form-search .btn {
+    position: absolute;
+    right: 25px;
+  }
+}
